--- a/site/People/Meng To/index.html
+++ b/site/People/Meng To/index.html
@@ -690,7 +690,7 @@
 
 
 
-<p>I stumbled upon Meng on Twitter and Youtube, and have been taking his class on <a href="../../Courses/DesignCode/">DesignCode</a></p>
+<p>I stumbled upon Meng on Twitter and Youtube, and have been taking his class on [[DesignCode]]</p>
 <p>What strikes me about Meng is his clarity on explaining the intention behind his design. The https://designcode.io/ is super </p>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">I’m 40 today <a href="https://t.co/WuxAoeELuw">pic.twitter.com/WuxAoeELuw</a></p>&mdash; Meng To (@MengTo) <a href="https://twitter.com/MengTo/status/1547605515089235968?ref_src=twsrc%5Etfw">July 14, 2022</a></blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
